fix broken resources

--- a/ac2011/ac2011.html
+++ b/ac2011/ac2011.html
@@ -1,4 +1,4 @@
-<link href="http://static.acfun.tv/ac2011/static/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
+<link href="static/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
 <style type="text/css">
 body{overflow:hidden;}
 h1,h2,h3,h4,h5,h6{font-weight:normal;margin:0;}
@@ -99,10 +99,10 @@ ul,li{margin:0;padding:0;list-style:none;}
 	height:50px;
 	z-index:3;
 }
-.prev{background:url(http://static.acfun.tv/ac2011/static/prev.png);display:none;}
-.prev:hover{background:url(http://static.acfun.tv/ac2011/static/prev-hover.png);}
-.next{background:url(http://static.acfun.tv/ac2011/static/next.png);}
-.next:hover{background:url(http://static.acfun.tv/ac2011/static/next-hover.png);}
+.prev{background:url(static/prev.png);display:none;}
+.prev:hover{background:url(static/prev-hover.png);}
+.next{background:url(static/next.png);}
+.next:hover{background:url(static/next-hover.png);}
 #b2 .container{width:3000px;position:relative;left:0;}
 
 /*=b3 --------------------------------*/
@@ -209,7 +209,7 @@ ul,li{margin:0;padding:0;list-style:none;}
 <script type="text/javascript" src="static/x.js"></script>
 <div id="wrapper">
 	<div id="b0">
-    	<img src="http://static.acfun.tv/ac2011/static/logo.png" />
+    	<img src="static/logo.png" />
     </div>
     <div id="b1">
     	<div class="histogram-col">
@@ -426,32 +426,32 @@ ul,li{margin:0;padding:0;list-style:none;}
         	<h1>人气赛高<span>Best UPs of 2011</span></h1>
             <ul class="clearfix">
             	<li>
-                	<img src="http://static.acfun.tv/ac2011/static/up-1.jpg" />
+                	<img src="static/up-1.jpg" />
                     <p><a href="http://www.acfun.tv/api/getuserinfo.php?mid=97546" target="_blank">pachincko</a></p>
                     <p class="hits">Hits : 28456648</p>
                 </li>
                 <li>
-                	<img src="http://static.acfun.tv/ac2011/static/up-2.jpg" />
+                	<img src="static/up-2.jpg" />
                     <p><a href="http://www.acfun.tv/api/getuserinfo.php?mid=91048" target="_blank">宇宙鱼</a></p>
                     <p class="hits">Hits : 8367165</p>
                 </li>
                 <li>
-                	<img src="http://static.acfun.tv/ac2011/static/up-3.jpg" />
+                	<img src="static/up-3.jpg" />
                     <p><a href="http://www.acfun.tv/api/getuserinfo.php?mid=119279" target="_blank">结野晴明</a></p>
                     <p class="hits">Hits : 5027193</p>
                 </li>
                 <li>
-                	<img src="http://static.acfun.tv/ac2011/static/up-4.jpg" />
+                	<img src="static/up-4.jpg" />
                     <p><a href="http://www.acfun.tv/api/getuserinfo.php?mid=21636" target="_blank">天花板上吊着猫</a></p>
                     <p class="hits">Hits : 4559838</p>
                 </li>
                 <li>
-                	<img src="http://static.acfun.tv/ac2011/static/up-5.jpg" />
+                	<img src="static/up-5.jpg" />
                     <p><a href="http://www.acfun.tv/api/getuserinfo.php?mid=196563" target="_blank">芜杆迁黄</a></p>
                     <p class="hits">Hits : 4358102</p>
                 </li>
                 <li>
-                	<img src="http://static.acfun.tv/ac2011/static/up-6.jpg" />
+                	<img src="static/up-6.jpg" />
                     <p><a href="http://www.acfun.tv/api/getuserinfo.php?mid=226580" target="_blank">没真相你发个黄瓜</a></p>
                     <p class="hits">Hits : 3732801</p>
                 </li>
@@ -591,7 +591,7 @@ ul,li{margin:0;padding:0;list-style:none;}
                 <li class="intro">
                     <h3>Jun 2011</h3>
                     <p>除了老虚，炎亚纶也表示我好好躺着怎么也中枪了！什么小炎，跟我有毛线关系呀！哼，不理你们了！
-                    <a href="http://static.acfun.tv/ac2011/static/v1.jpg" target="_blank"><img src="http://static.acfun.tv/ac2011/static/v1-thumbnail.jpg" />第一个测试界面完成</a></p>
+                    <a href="static/v1.jpg" target="_blank"><img src="static/v1-thumbnail.jpg" />第一个测试界面完成</a></p>
                 </li>
                 <li class="info">
                 	<ul class="list">
@@ -607,7 +607,7 @@ ul,li{margin:0;padding:0;list-style:none;}
                 <li class="intro">
                     <h3>Jul 2011</h3>
                     <p>为在7·23动车事故中遇难的40位无辜群众默哀。连把乘客安全送到目的地都做不到的和谐号，居然还想学新干线变身拯救世界。至于你信不信，反正我是不信！
-                    <a href="http://static.acfun.tv/ac2011/static/v2.png" target="_blank"><img src="http://static.acfun.tv/ac2011/static/v2-thumbnail.png" />第二个测试界面完成</a></p>
+                    <a href="static/v2.png" target="_blank"><img src="static/v2-thumbnail.png" />第二个测试界面完成</a></p>
                 </li>
                 <li class="info">
                 	<ul class="list">
@@ -623,7 +623,7 @@ ul,li{margin:0;padding:0;list-style:none;}
                 <li class="intro">
                     <h3>Aug 2011</h3>
                     <p>AC第一次对评论做出限制，似乎是因为AC娘的口气太卖萌的缘故同学们纷纷表示AC娘你是要闹哪样w 其实AC娘哪样都要闹~
-                    <a href="http://static.acfun.tv/ac2011/static/v3.png" target="_blank"><img src="http://static.acfun.tv/ac2011/static/v3-thumbnail.png" />第三个测试界面完成</a></p>
+                    <a href="static/v3.png" target="_blank"><img src="static/v3-thumbnail.png" />第三个测试界面完成</a></p>
                 </li>
                 <li class="info">
                 	<ul class="list">
@@ -653,7 +653,7 @@ ul,li{margin:0;padding:0;list-style:none;}
                 <li class="intro">
                     <h3>Oct 2011</h3>
                     <p>民国百年，我们的百年。然而……果然又战起来了！
-                    <a href="http://static.acfun.tv/ac2011/static/v4.jpg" target="_blank"><img src="http://static.acfun.tv/ac2011/static/v4-thumbnail.png" />手机版测试界面</a></p>
+                    <a href="static/v4.jpg" target="_blank"><img src="static/v4-thumbnail.png" />手机版测试界面</a></p>
                 </li>
                 <li class="info">
                 	<ul class="list">
@@ -667,7 +667,7 @@ ul,li{margin:0;padding:0;list-style:none;}
                 <li class="intro">
                     <h3>Nov 2011</h3>
                     <p>前端后台继续跳票，原来没有摆上日程的播放器娘倒是先更新了。说起来，神棍节AC娘也是一个人过的呢 T^T
-                    <a href="http://static.acfun.tv/ac2011/static/v5.png" target="_blank"><img src="http://static.acfun.tv/ac2011/static/v5-thumbnail.png" />第四个测试界面完成</a></p>
+                    <a href="static/v5.png" target="_blank"><img src="static/v5-thumbnail.png" />第四个测试界面完成</a></p>
                 </li>
                 <li class="info">
                 	<ul class="list">
