--- a/ac2012/index.html
+++ b/ac2012/index.html
@@ -6456,7 +6456,7 @@
     <!-- brought to you by 千歳 -->
     <!-- http://weibo.com/chitosai -->
 
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.0.min.js" type="text/javascript"></script>
+    <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="js/jquery.masonry.min.js" type="text/javascript"></script>
     <script src="js/chi.js" type="text/javascript"></script>
     <script type="text/javascript">
