--- a/ac2011/index.html
+++ b/ac2011/index.html
@@ -21,7 +21,7 @@ body{
 </div>
 <div id="_main_">
 </div>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="static/jquery.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 	screenWidth = $(window).width();
